--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1.4", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
+# tokio = { version = "1", features = ["full"] }
 eyre = "0.6.8"
 color-eyre = "0.6.2"
 usvg-text-layout = "0.29.0"
