--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "svg2colored-png"
-version = "1.1.0"
+version = "1.2.0"
 edition = "2021"
 description = "An SVG to PNG converter"
 authors = ["MCorange <mcorangecodes@gmail.com>"]
@@ -22,3 +22,5 @@ usvg-text-layout = "0.29.0"
 usvg = "0.29.0"
 resvg = "0.29.0"
 tiny-skia = "0.8.3"
+log = "0.4.20"
+simple_logger = "4.2.0"
